create request css

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -64,8 +64,8 @@
     <div class="linkgroup_cont misclinks">
         <div class="linkgroup">
             <div class="link_cont">
-                <i class="bi bi-journal-plus"></i>
-                <span>Request</span>
+                <i class="bi bi-card-heading"></i>
+                <span>Requests</span>
             </div>
             <div class="link_cont">
                 <i class="bi bi-people"></i>
