--- a/OmneFictio.Web/Views/Home/Publish.cshtml
+++ b/OmneFictio.Web/Views/Home/Publish.cshtml
@@ -23,9 +23,9 @@
         <div class="wf-post_body">
             <div class="wf-post_primary">
                 <span>Title</span>
-                <input class="wf-title" type="text" name="title">
+                <input class="wf-title" type="text" name="title" placeholder="Title">
                 <span>Description</span>
-                <textarea class="wf-description" name="description"></textarea>
+                <textarea class="wf-description" name="description" placeholder="Description"></textarea>
             </div>
             <div class="wf-post_details">
                 <div class="wf-language">
@@ -48,7 +48,7 @@
                     </select>
                 </div>
                 <div class="wf-addtag">
-                    <button>Add Tag <i class="bi bi-plus"></i></button>
+                    <button type="button">Add Tag <i class="bi bi-plus"></i></button>
                 </div>
                 <div class="wf-tags">
                     <span data-wftag="action">Action<i class="bi bi-x-circle wf-removespanbtn"></i></span>
@@ -57,7 +57,7 @@
                 </div>
                 
                 <div class="wf-addseries">
-                    <button>Series <i class="bi bi-plus"></i></button>
+                    <button type="button">Series <i class="bi bi-plus"></i></button>
                 </div>
                 <div class="wf-fanfic_series">
                     <span data-wfseries="overlord">Overlord<i class="bi bi-x-circle wf-removespanbtn"></i></span>
@@ -70,7 +70,7 @@
         </div>
     </form>
     <form class="request_form">
-        <div class="rf-post_body">
+        <div class="rf-post_primary">
             <span>Title</span>
             <input class="rf-title" type="text" name="title">
             <span>Description</span>
