--- a/OmneFictio.Web/wwwroot/css/publish.css
+++ b/OmneFictio.Web/wwwroot/css/publish.css
@@ -32,7 +32,7 @@
 }
 
 .writing_form {
-  display: flex;
+  display: none;
   flex-direction: column;
 }
 .writing_form .wf-post_body {
@@ -69,6 +69,8 @@
 .writing_form .wf-post_details {
   display: flex;
   flex-direction: column;
+  gap: 4px;
+  padding: 10px 16px;
 }
 .writing_form .wf-post_details .wf-language, .writing_form .wf-post_details .wf-type {
   display: flex;
@@ -176,7 +178,53 @@
 }
 
 .request_form {
-  display: none;
+  display: flex;
+  flex-direction: column;
+}
+.request_form .rf-post_primary {
+  display: flex;
+  flex-direction: column;
+}
+.request_form .rf-post_primary span {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.2rem;
+  padding-left: 6px;
+  margin-bottom: 8px;
+}
+.request_form .rf-post_primary .rf-title {
+  padding: 6px 10px;
+  margin-bottom: 12px;
+}
+.request_form .rf-post_primary .rf-description {
+  padding: 6px 10px;
+  width: 100%;
+  height: 300px;
+  margin-bottom: 20px;
+}
+.request_form .rf-post_primary .rf-title, .request_form .rf-post_primary .rf-description {
+  border-radius: 4px;
+  background-color: var(--publish-input-color);
+  color: var(--text-color1);
+  border: none;
+  outline: none;
+}
+.request_form .rf-submit {
+  display: flex;
+  justify-content: center;
+  padding: 0 18px 18px;
+}
+.request_form .rf-submit input {
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 8px;
+  padding: 4px 16px;
+  font-size: 1.5rem;
+  transition: 0.2s ease;
+  background-color: rgb(32, 109, 40);
+}
+.request_form .rf-submit input:hover {
+  background-color: rgb(22, 95, 29);
 }
 
 @media (min-width: 768px) {
@@ -191,19 +239,28 @@
   }
   .wf-post_body {
     flex-direction: row !important;
+    justify-content: space-between;
   }
+  .wf-post_body .wf-post_primary {
+    width: 45%;
+  }
+  .wf-post_body .wf-post_details {
+    width: 45%;
+    padding: 30px 0 10px;
+  }
+  .request_form {
+    align-items: center;
+  }
+  .request_form .rf-post_primary {
+    width: 80%;
+  }
+}
+@media (min-width: 992px) {
   .wf-post_body .wf-post_primary {
     width: 50%;
   }
   .wf-post_body .wf-post_details {
-    width: 50%;
-    padding: 30px 0 10px 20px;
-    gap: 8px;
-  }
-}
-@media (min-width: 992px) {
-  .wf-post_body .wf-post_details {
-    padding: 30px 0 20px 30px;
+    width: 40%;
     gap: 10px;
   }
 }/*# sourceMappingURL=publish.css.map */
