--- a/OmneFictio.Web/wwwroot/css/publish.css
+++ b/OmneFictio.Web/wwwroot/css/publish.css
@@ -12,19 +12,24 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 18px;
+  align-items: center;
+  height: 84px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .createpost .swap_form .sf-swapformbtn {
   padding: 0 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.createpost .swap_form .sf-swapformbtn span {
+  cursor: pointer;
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.4rem;
 }
 .createpost .swap_form .sf-swapformbtn .sf-icon {
+  display: none;
   background-color: var(--text-color1);
   width: 6px;
   height: 4px;
@@ -161,7 +166,7 @@
 .writing_form .wf-submit {
   display: flex;
   justify-content: center;
-  padding: 18px;
+  padding: 0 18px 18px;
 }
 .writing_form .wf-submit input {
   border: none;
@@ -178,7 +183,7 @@
 }
 
 .request_form {
-  display: flex;
+  display: none;
   flex-direction: column;
 }
 .request_form .rf-post_primary {
@@ -228,8 +233,15 @@
 }
 
 @media (min-width: 768px) {
-  .sf-swapformbtn > span {
-    font-size: 1.6rem !important;
+  .sf-swapformbtn {
+    font-size: 1.8rem !important;
+    transition: 0.2s;
+  }
+  .sf-swaptowriting:hover {
+    font-size: 2rem !important;
+  }
+  .sf-swaptorequest:hover {
+    font-size: 2rem !important;
   }
   .wf-post_primary > span {
     font-size: 1.4rem !important;
@@ -239,7 +251,7 @@
   }
   .wf-post_body {
     flex-direction: row !important;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
   .wf-post_body .wf-post_primary {
     width: 45%;
