--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
          <!--data-login_uri="https://localhost:7067/Auth/GoogleSigninDirectly">-->
     </div>
     <div class="click-outside"></div>
-    <div class="f-modaldarkness"></div>
+    <div class="modalbg"></div>
     <form class="login-modal" id="login-modal">
         <div class="lm-header">
             <span class="lm-title">Login</span>
