--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -195,9 +195,9 @@
     </div>
 </div>
 
-<div class="filter-tagdd" id="filter-taggddmodal">
+<div class="filter-tagdd" id="filter-tagddmodal">
     <div class="tagdd-header">
-        <input type="text" class="taggdd-searchbar" id="taggdd-searchbar" placeholder="Search tag">
+        <input type="text" class="tagdd-searchbar" id="tagdd-searchbar" placeholder="Search tag">
         <i class="bi bi-x-lg" id="f-taggdd-close"></i>
     </div>
     <ul class="" id="f-tagdd-list" data-action="include">
