--- a/OmneFictio.Web/wwwroot/css/publish.css
+++ b/OmneFictio.Web/wwwroot/css/publish.css
@@ -1,3 +1,7 @@
+.modalbg {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
 .createpost {
   display: flex;
   flex-direction: column;
@@ -144,13 +148,13 @@
   align-items: center;
 }
 .writing_form .wf-post_details .wf-tags span i, .writing_form .wf-post_details .wf-fanfic_series span i {
-  display: none;
+  display: flex;
   font-size: 1.1rem;
   margin-left: 5px;
   cursor: pointer;
 }
 .writing_form .wf-post_details .wf-tags span i:before, .writing_form .wf-post_details .wf-fanfic_series span i:before {
-  background-color: #c08e8e;
+  background-color: #be2424;
   border-radius: 50%;
   transition: 0.1s;
 }
@@ -248,6 +252,9 @@
   }
   .wf-title, .wf-description {
     font-size: 1.2rem;
+  }
+  .wf-tags span > i:before, .wf-fanfic_series span > i:before {
+    background-color: #c08e8e !important;
   }
   .wf-post_body {
     flex-direction: row !important;
