--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -1,6 +1,21 @@
 
 @import 'post';
 
+.read-nopost{
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    color: var(--text-color1);
+    font-size: 1.2rem;
+    font-family: 'Josefin Sans', sans-serif;
+    span {
+        padding: 20px 40px;
+        background-color: #6f2424;
+        border-radius: 10px;
+        border: 2px solid #340505;
+    }
+}
+
 main{
     display: flex;
     flex-direction: row;
@@ -199,8 +214,8 @@ main{
     opacity: 0;
     transition: opacity 0.3s ease;
     z-index: 505;
-    position: absolute;
-    top: 6%;
+    position: fixed;
+    top: 12%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
