--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -197,7 +197,7 @@ header{
     flex-direction: column;
     transition: opacity 0.3s ease;
     z-index: 509;
-    position: absolute;
+    position: fixed;
     top: 12%;
     margin-left: auto;
     margin-right: auto;
@@ -522,8 +522,8 @@ header{
 .filter-tagdd{
     display: none;
     flex-direction: column;
-    position: absolute;
-    top: 6%;
+    position: fixed;
+    top: 12%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -578,8 +578,8 @@ header{
 .filter-addseries{
     display: none;
     flex-direction: column;
-    position: absolute;
-    top: 6%;
+    position: fixed;
+    top: 12%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
