changed allow 18 in filters

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -153,11 +153,8 @@
                 <option value="3">Finished</option>
             </select>
             <label class="f-allow18">
-                +18
-                <div class="checkboxOverride">
-                    <input type="checkbox" name="allow18" id="allow18checkbox" value="1">
-                    <label for="allow18checkbox"></label>
-                </div>
+                <span>+18</span>
+                <input type="checkbox" name="allow18" id="allow18checkbox" value="1">
             </label>
             <select name="lastupdate">
                 <option value="0">Last update</option>
