--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -577,7 +577,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 3px;
+  gap: 6px 8px;
 }
 .filter-cont .f-body .f-options select, .filter-cont .f-body .f-options .f-allow18 {
   outline: none;
@@ -588,58 +588,21 @@ main {
   border-radius: 5px;
   font-size: 1.1rem;
   cursor: pointer;
-  margin: 0 5px 7px;
 }
 .filter-cont .f-body .f-options .f-allow18 {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
 }
-.filter-cont .f-body .f-options .f-allow18 input[type=checkbox] {
-  visibility: hidden;
+.filter-cont .f-body .f-options .f-allow18 > span {
+  padding-right: 6px;
 }
-.filter-cont .f-body .f-options .f-allow18 .checkboxOverride {
-  position: relative;
-  width: 16px;
-  margin-left: 4px;
-}
-.filter-cont .f-body .f-options .f-allow18 .checkboxOverride input[type=checkbox]:checked + label:after {
-  opacity: 1;
-}
-.filter-cont .f-body .f-options .f-allow18 .checkboxOverride input[type=checkbox]:checked + label {
-  background-color: #24ac17 !important;
-  border: 2px solid #24ac17 !important;
-  color: #fff !important;
-}
-.filter-cont .f-body .f-options .f-allow18 .checkboxOverride label {
-  background-color: transparent;
-  border: 2px solid var(--text-color1);
-  cursor: pointer;
-  height: 16px;
-  width: 16px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 1px;
-  margin: auto 0;
-  border-radius: 4px;
-}
-.filter-cont .f-body .f-options .f-allow18 .checkboxOverride label:after {
-  border-style: none none solid solid;
-  content: "";
-  height: 6px;
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  top: 0px;
-  bottom: 3px;
-  margin: auto;
-  transform: rotate(-45deg);
-  width: 12px;
+.filter-cont .f-body .f-options .f-allow18 > input {
+  width: 1rem;
 }
 .filter-cont .f-body .f-tagsbtn_cont {
   display: flex;
   justify-content: space-between;
-  padding: 2px 10px 10px;
+  padding: 10px;
   font-size: 1.4rem;
 }
 .filter-cont .f-body .f-tagsbtn_cont input {
