--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -365,7 +365,7 @@ main{
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            padding-bottom: 3px;
+            gap: 6px 8px;
             select, .f-allow18 {
                 outline: none;
                 border: none;
@@ -375,59 +375,22 @@ main{
                 border-radius: 5px;
                 font-size: 1.1rem;
                 cursor: pointer;
-                margin: 0 5px 7px;
             }
             .f-allow18{
                 display: flex;
-                justify-content: space-between;
-                input[type="checkbox"] {
-                    visibility: hidden;
+                flex-direction: row;
+                > span{
+                    padding-right: 6px;
                 }
-                .checkboxOverride {
-                    position: relative;
-                    width: 16px;
-                    margin-left: 4px;
-                }
-                .checkboxOverride input[type="checkbox"]:checked + label:after {
-                    opacity: 1;
-                }
-                .checkboxOverride input[type="checkbox"]:checked + label{
-                    background-color: #24ac17 !important;
-                    border: 2px solid #24ac17 !important;
-                    color: #fff !important;
-                }
-                .checkboxOverride label {
-                    background-color: transparent;
-                    border: 2px solid var(--text-color1);
-                    cursor: pointer;
-                    height: 16px;
-                    width: 16px;
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    bottom: 1px;
-                    margin: auto 0;
-                    border-radius: 4px;
-                }
-                .checkboxOverride label:after {
-                    border-style: none none solid solid;
-                    content: "";
-                    height: 6px;
-                    opacity: 0;
-                    position: absolute;
-                    left: 0;
-                    top: 0px;
-                    bottom: 3px;
-                    margin: auto;
-                    transform: rotate(-45deg);
-                    width: 12px;
+                > input{
+                    width: 1rem;
                 }
             }
         }
         .f-tagsbtn_cont{
             display: flex;
             justify-content: space-between;
-            padding: 2px 10px 10px;
+            padding: 10px;
             font-size: 1.4rem;
             input{
                 border: none;
