design fix for small screens

--- a/OmneFictio.Web/Views/Home/Publish.cshtml
+++ b/OmneFictio.Web/Views/Home/Publish.cshtml
@@ -105,21 +105,38 @@
             <div class="wf-post_details">
                 <div class="wf-language">
                     <span>Language:</span>
-                    <select>
-                        <option>English</option>
-                        <option>Turkish</option>
-                        <option>German</option>
-                        <option>Japanese</option>
-                        <option>Russian</option>
+                    <select name="postlan">
+                        <option value="0">Language</option>
+                        <option value="1">English</option>
+                        <option value="2">Turkish</option>
+                        <option value="3">French</option>
+                        <option value="4">German</option>
+                        <option value="5">Japanese</option>
                     </select>
                 </div>
                 <div class="wf-type">
                     <span>Type:</span>
-                    <select>
-                        <option>Story</option>
-                        <option>Scenario</option>
-                        <option>Fanfiction</option>
-                        <option>Plot</option>
+                    <select name="type">
+                        <option value="0">Type</option>
+                        <option value="story">Story</option>
+                        <option value="scenario">Scenario</option>
+                        <option value="fanfiction">Fanfiction</option>
+                        <option value="plot">Plot</option>
+                    </select>
+                </div>
+                <div class="wf-ratedas">
+                    <span>Rated as:</span>
+                    <select name="postratedas">
+                        <option value="0">Rate</option>
+                        <option value="1">Sexual I</option>
+                        <option value="2">Sexual II</option>
+                        <option value="3">Sexual III</option>
+                        <option value="4">Violence I</option>
+                        <option value="5">Violence II</option>
+                        <option value="6">Violence III</option>
+                        <option value="7">Mix I</option>
+                        <option value="8">Mix II</option>
+                        <option value="9">Mix III</option>
                     </select>
                 </div>
                 <div class="wf-addtag">
