--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -285,12 +285,13 @@
 
     </div>
     <div class="nav-others">
-        <a class="">Shop</a>
+        <a class="">Requests</a>
         <a class="">Community</a>
-        <a class="">News</a>
-        <a class="">Tutorials</a>
+        <a class="">Shop</a>
         <a class="">Customize</a>
         <a class="">Settings</a>
+        <a class="">News</a>
+        <a class="">Tutorials</a>
     </div>
 </nav>
 <div class="posts-cont">
