--- a/OmneFictio.Web/wwwroot/css/publish.scss
+++ b/OmneFictio.Web/wwwroot/css/publish.scss
@@ -18,6 +18,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
         height: 84px;
         user-select: none;
         
@@ -81,7 +82,7 @@
         gap: 4px;
         padding: 10px 16px;
 
-        .wf-language, .wf-type{
+        .wf-language, .wf-type, .wf-ratedas{
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
@@ -100,6 +101,7 @@
                 padding: 4px;
                 border-radius: 5px;
                 font-size: 1.1rem;
+                font-family: 'Gudea';
                 cursor: pointer;
             }
         }
@@ -219,6 +221,8 @@
             border-radius: 4px;
             background-color: var(--publish-input-color);
             color: var(--text-color1);
+            font-family: 'Gudea';
+            font-size: 1.1rem;
             border: none;
             outline: none;
         }
