--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -750,6 +750,12 @@ header{
         width: 100%;
     }
 }
+@media (max-width: 260px) {
+    .filter-tagdd, .filter-addseries, .login-modal,
+    .orderby_type-cont, .filter-cont{
+        width: 100% !important;
+    }
+}
 @media (max-width: 240px) {
     .notifications-shortcut{
         display: none;
