--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -1,4 +1,5 @@
 @using OmneFictio.Web.Models
+@using OmneFictio.Web.PostReadModel;
 @using System.Security.Claims
 @{
     ViewData["Title"] = "Read";
