--- a/OmneFictio.Web/Views/Home/Publish.cshtml
+++ b/OmneFictio.Web/Views/Home/Publish.cshtml
@@ -31,14 +31,14 @@
     </div>
     <div class="fadds-dropdowns">
         <select>
-            <option value="Type">Type</option>
-            <option value="Book">Book</option>
-            <option value="Movie">Movie</option>
-            <option value="TV Show">TV Show</option>
-            <option value="Game">Game</option>
-            <option value="Anime">Anime</option>
-            <option value="Cartoon">Cartoon</option>
-            <option value="Comic/Manga">Comic/Manga</option>
+            <option value="0">Type</option>
+            <option value="1">Movie</option>
+            <option value="2">TV Show</option>
+            <option value="3">Game</option>
+            <option value="4">Book</option>
+            <option value="5">Anime/Manga</option>
+            <option value="6">Cartoon/Comic</option>
+            <option value="7">Other</option>
         </select>
         <select>
             <option value="AZ">A-Z</option>
@@ -118,25 +118,20 @@
                     <span>Type:</span>
                     <select name="type">
                         <option value="0">Type</option>
-                        <option value="story">Story</option>
-                        <option value="scenario">Scenario</option>
-                        <option value="fanfiction">Fanfiction</option>
-                        <option value="plot">Plot</option>
+                        <option value="1">Story</option>
+                        <option value="2">Scenario</option>
+                        <option value="3">Fanfiction</option>
+                        <option value="4">Plot</option>
                     </select>
                 </div>
                 <div class="wf-ratedas">
                     <span>Rated as:</span>
                     <select name="postratedas">
                         <option value="0">Rate</option>
-                        <option value="1">Sexual I</option>
-                        <option value="2">Sexual II</option>
-                        <option value="3">Sexual III</option>
-                        <option value="4">Violence I</option>
-                        <option value="5">Violence II</option>
-                        <option value="6">Violence III</option>
-                        <option value="7">Mix I</option>
-                        <option value="8">Mix II</option>
-                        <option value="9">Mix III</option>
+                        <option value="1">E - Everyone</option>
+                        <option value="2">T - 13+</option>
+                        <option value="3">M - 15+</option>
+                        <option value="4">A - 18+</option>
                     </select>
                 </div>
                 <div class="wf-addtag">
