--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -149,9 +149,10 @@
             </select>
             <select name="poststatus">
                 <option value="0">Cur. state</option>
-                <option value="1">In progress</option>
-                <option value="2">Dropped</option>
-                <option value="3">Finished</option>
+                <option value="1">In-progress</option>
+                <option value="2">Paused</option>
+                <option value="3">Dropped</option>
+                <option value="4">Finished</option>
             </select>
             <label class="f-allow18">
                 <span>+18</span>
@@ -216,14 +217,14 @@
     </div>
     <div class="fadds-dropdowns">
         <select>
-            <option value="Type">Type</option>
-            <option value="Book">Book</option>
-            <option value="Movie">Movie</option>
-            <option value="TV Show">TV Show</option>
-            <option value="Game">Game</option>
-            <option value="Anime">Anime</option>
-            <option value="Cartoon">Cartoon</option>
-            <option value="Comic/Manga">Comic/Manga</option>
+            <option value="0">Type</option>
+            <option value="1">Movie</option>
+            <option value="2">TV Show</option>
+            <option value="3">Game</option>
+            <option value="4">Book</option>
+            <option value="5">Anime/Manga</option>
+            <option value="6">Cartoon/Comic</option>
+            <option value="7">Other</option>
         </select>
         <select>
             <option value="AZ">A-Z</option>
