--- a/OmneFictio.Web/wwwroot/css/publish.scss
+++ b/OmneFictio.Web/wwwroot/css/publish.scss
@@ -127,10 +127,13 @@
                 background-color: rgb(58, 129, 64);
             }
         }
-        .wf-addseries button{
-            background-color: rgb(139, 136, 199);
-            &:hover{
-                background-color: rgb(117, 113, 191);
+        .wf-addseries {
+            display: none;
+            button{
+                background-color: rgb(139, 136, 199);
+                &:hover{
+                    background-color: rgb(117, 113, 191);
+                }
             }
         }
         .wf-tags, .wf-fanfic_series{
@@ -166,8 +169,11 @@
         .wf-tags > span{
             background-color: rgb(91 130 94);
         }
-        .wf-fanfic_series > span{
-            background-color: rgb(106 105 138);
+        .wf-fanfic_series{
+            display: none;
+            span{
+                background-color: rgb(106 105 138);
+            }
         }
     }
     .wf-submit{
