--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -4,10 +4,11 @@
 @{
     ViewData["Title"] = "Read";
     @section Stylesheets {
-        <link rel="stylesheet" href="~/css/read.css" />
+        <link rel="stylesheet" href="~/css/read.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
     }
     @section Scripts {
-        <script src="~/js/read.js"></script>
+        <script src="~/js/read.js" asp-append-version="true" ></script>
     }
 }
 @{
@@ -421,7 +422,7 @@
                                             @ortRate
                                         }
                                         else{
-                                            @Html.Raw("--/10");
+                                            @Html.Raw("-/10");
                                         }
                                     }
                                 </span>
@@ -457,7 +458,7 @@
                                     @if(post.postType != null){
                                         @post.postType.body
                                     }else{
-                                        @Html.Raw("None")
+                                        @Html.Raw("---")
                                     }
                                 </span>
                             </div>
@@ -478,7 +479,17 @@
                                     @if(post.postStatus != null){
                                         @post.postStatus.body
                                     }else{
-                                        @Html.Raw("None")
+                                        @Html.Raw("---")
+                                    }
+                                </span>
+                            </div>
+                            <div class="pd-ratedas">
+                                <span class="pd-heading">Rated as:</span>
+                                <span class="pd-value">
+                                    @if(post.ratedAs != null){
+                                        @post.ratedAs.body
+                                    }else{
+                                        @Html.Raw("---")
                                     }
                                 </span>
                             </div>
