--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -151,10 +151,13 @@
   font-size: 1.1rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 600;
+  padding-right: 4px;
+  margin-bottom: unset;
 }
 .post-menu .pd-details .pd-value {
   font-size: 0.9rem;
-  font-family: "Gudea", sans-serif;
+  font-family: "Itim", cursive;
+  color: #d45e24;
 }
 .post-menu .pd-details .pd-tags {
   display: flex;
@@ -162,7 +165,6 @@
   gap: 6px;
   font-size: 0.7rem;
   font-family: "Gudea", sans-serif;
-  margin-bottom: 8px;
   padding: 0 4px;
 }
 .post-menu .pd-details .pd-series {
@@ -171,14 +173,13 @@
   gap: 10px;
   font-size: 0.9rem;
   font-family: "Itim", cursive;
-  margin-bottom: 8px;
   padding: 0 4px;
 }
-.post-menu .pd-details .pd-type {
+.post-menu .pd-details > * {
   margin-bottom: 8px;
 }
-.post-menu .pd-details .pd-poststatus {
-  margin-bottom: 8px;
+.post-menu .pd-details > *:last-child {
+  margin-bottom: unset;
 }
 .post-menu .pd-right {
   display: flex;
