--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -152,10 +152,13 @@
             font-size: 1.1rem;
             font-family: 'Josefin Sans', sans-serif;
             font-weight: 600;
+            padding-right: 4px;
+            margin-bottom: unset;
         }
         .pd-value{
             font-size: 0.9rem;
-            font-family: 'Gudea', sans-serif;
+            font-family: 'Itim', cursive;
+            color: #d45e24;
         }
         .pd-tags{
             display: flex;
@@ -163,7 +166,6 @@
             gap: 6px;
             font-size: 0.7rem;
             font-family: 'Gudea', sans-serif;
-            margin-bottom: 8px;
             padding: 0 4px;
         }
         .pd-series{
@@ -172,14 +174,17 @@
             gap: 10px;
             font-size: 0.9rem;
             font-family: 'Itim', cursive;
-            margin-bottom: 8px;
             padding: 0 4px;
         }
         .pd-type{
-            margin-bottom: 8px;
         }
         .pd-poststatus{
+        }
+        > * {
             margin-bottom: 8px;
+            &:last-child{
+                margin-bottom: unset;
+            }
         }
     }
     .pd-right{
