create post error/success message and async in api

--- a/OmneFictio.Web/Views/Home/Publish.cshtml
+++ b/OmneFictio.Web/Views/Home/Publish.cshtml
@@ -146,6 +146,8 @@
                 </div>
             </div>
         </div>
+        <span class="wf-errormessage"></span>
+        <span class="wf-successmessage"></span>
         <div class="wf-submit">
             <input type="submit" value="Save"></input>
         </div>
@@ -157,6 +159,8 @@
             <span>Description</span>
             <textarea class="rf-description" name="body" placeholder="Description"></textarea>
         </div>
+        <span class="rf-errormessage"></span>
+        <span class="rf-successmessage"></span>
         <div class="rf-submit">
             <input type="submit" value="Send"></input>
         </div>
