--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -162,18 +162,20 @@
 .post-menu .pd-details .pd-tags {
   display: flex;
   flex-wrap: wrap;
+  padding: 0 4px;
+  color: #d45e24;
   gap: 6px;
   font-size: 0.7rem;
   font-family: "Gudea", sans-serif;
-  padding: 0 4px;
 }
 .post-menu .pd-details .pd-series {
   display: flex;
   flex-wrap: wrap;
+  padding: 0 4px;
+  color: #d45e24;
   gap: 10px;
   font-size: 0.9rem;
   font-family: "Itim", cursive;
-  padding: 0 4px;
 }
 .post-menu .pd-details > * {
   margin-bottom: 8px;
