--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -163,18 +163,20 @@
         .pd-tags{
             display: flex;
             flex-wrap: wrap;
+            padding: 0 4px;
+            color: #d45e24;
             gap: 6px;
             font-size: 0.7rem;
             font-family: 'Gudea', sans-serif;
-            padding: 0 4px;
         }
         .pd-series{
             display: flex;
             flex-wrap: wrap;
+            padding: 0 4px;
+            color: #d45e24;
             gap: 10px;
             font-size: 0.9rem;
             font-family: 'Itim', cursive;
-            padding: 0 4px;
         }
         .pd-type{
         }
